homepage desktop fixing pin and spacing

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -419,15 +419,22 @@
     border-bottom: 1px solid #d2e8fa;
     padding-bottom: 16px;
     .welcome {
+        padding-bottom: 10px;
         margin-top: -51px;
         font-weight: 700;
         font-size: 19px;
         color: #676767;
     }
     button {
-        color: #c5c5c5;
-        padding: 6px;
-        margin-top: 12px;
+        margin-right: 15px;
+        padding: 9px 10px;
+        margin-top: 8px;
+        margin-bottom: 4px;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        border-color: #91CFFF !important;
     }
 }
 
